Fri Dec 14 21:22:12 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am: In automake, INCLUDES is now deprecated in favour of
	  AM_CPPFLAGS so update to use the latter.

Fri Dec 14 04:45:12 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: If md5_file() fails with ENOENT, assume the file was
	  removed during indexing and only report this with --verbose as we
	  do in other such cases.

Fri Dec 14 04:42:34 GMT 2012  Olly Betts <olly@survex.com>

	* md5wrap.cc: If we get a read error while calculating the md5 checksum
	  of a file, fail rather than returning the checksum of the file up to
	  that point.

Fri Dec 14 04:35:52 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: Calculate the md5 from the loaded file contents when
	  indexing SVG and Atom files.  Use a const ref to avoid a string
	  copy of the file contents for HTML and uncompressed ABI word.

Fri Dec 14 04:24:17 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac,diritor.cc,diritor.h,loadfile.cc,loadfile.h,omindex.cc:
	  If we open a file to index it, keep the fd around and use it with
	  libmagic, provided magic_descriptor() is available.

Tue Dec 11 03:35:29 GMT 2012  Olly Betts <olly@survex.com>

	* diritor.cc,diritor.h,omindex.cc: If we get ENOENT for a file or
	  directory we're trying to index, assume it has been removed between
	  us reading the directory entry for it and trying to open it, and
	  only report the failure to index under --verbose.

Wed Nov 21 04:06:54 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: Fix omindex not to segfault when -F option without a ':'
	  is passed.

Tue Sep 25 23:57:12 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am,omindex.cc: Replace shell_protect() with
	  append_filename_argument() from common/append_filename_arg.h.
	  Extracting text using external filters now works for filenames
	  containing a newline character.

Thu Aug 09 20:07:59 GMT 2012  Dan Colish <dcolish@gmail.com>
